Adição de Formulário e tabela

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </aside>
     </section>
 
+
     <section id="projeto">
 
         <h2">Projetos</h2>
@@ -62,6 +63,44 @@
                 </p>
             </article>
     </section>
+
+    <section>
+
+
+    </section id="habilidades">
+        <h2>Habilidades e tecnologias</h2>
+
+        <table> <!-- Tabela. -->
+
+            <thead> <!-- Cabeçalho da Tabela -->
+                <tr> <!-- Define a sessão do cabeçalho desta tabela. Uma linha. -->
+                   <th>Técnologia</th> <!-- th= tag de coluna. -->
+                    <th>Nível</th>
+                   <th>Descrição</th>
+                </tr>
+            </thead>
+
+            <tbody> <!-- Corpo da tabela. -->
+                <tr> <!-- Linha. -->
+                    <td>HTML</td> <!-- Valor das Colunas -->
+                    <td>Iniciante</td>
+                    <td>Capaz de construir estruturas de páginas web semânticas e responsivas.</td>
+                </tr>
+
+                <tr>
+                    <td>CSS</td>
+                    <td>Intermediário</td>
+                    <td>Experiencia com flexbox, grid e animações.</td>
+                </tr>
+
+                <tr> 
+                    <td>JavaScript</td> 
+                    <td>Básico</td>
+                    <td>Desenvolvimento de scripts ao lado do cliente para interações.</td>
+                </tr>
+            </tbody>
+
+        </table>
     <footer> <!-- Rodapé -->
         <p>Direitos reservados a Pedro</p>
 
@@ -108,6 +147,9 @@
 
 
             </form>
+
+
+
             <address> <!-- Informações de contato. -->
                 Email: <a href="mailto:pedrin@fute.com">pedrin@fute.com</a>
                 <!-- Redirecionamento. Mailto= Redireciona para Email.-->
