--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                 <li><a href="#contato">Contato</a></li>
                 <li><a href="https://google.com" target="_blank">Google</a></li>
                 <!-- Target=_blank= Abre o link em outra aba.-->
-
-
             </ul>
         </nav>
     </header>
@@ -59,7 +57,7 @@
                 <h3>Portifólio</h3>
 
                 <p>
-                    Este foi o primeiro que desvolvi usando front-end.
+                    Este foi o primeiro site que desvolvi usando front-end.
                 </p>
             </article>
     </section>
